--- a/template.ipynb
+++ b/template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -82,38 +82,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test() :\n",
-    "    f = tier0+'/store/data/Run2017F/ZeroBias4/MINIAOD/PromptReco-v1/000/306/432/00000/8E9534C0-40C7-E711-A529-02163E0140D6.root'  \n",
-    "    events = Events(f)\n",
-    "    ls = eventsInLumiRange(events,300,330)\n",
+    "    f1 = tier0+'/store/data/Run2017F/ZeroBias4/MINIAOD/PromptReco-v1/000/306/432/00000/8E9534C0-40C7-E711-A529-02163E0140D6.root'  \n",
+    "    f2 = tier0+'/store/data/Run2017F/ZeroBias/MINIAOD/PromptReco-v1/000/306/135/00000/8C5C6752-63C5-E711-B4C4-02163E0120F0.root'\n",
+    "    events = Events(f2)\n",
+    "#    ls = eventsInLumiRange(events,300,330)\n",
+    "    ls = eventsInLumiRange(events,0,1000)\n",
     "    mini = Mini()\n",
+    "    a= events.to(ls[0])\n",
+    "    mini.set(events)\n",
+    "    names = events.object().triggerNames(mini.triggerBits[0].product())\n",
+    "    for i in xrange(mini.triggerBits[0].product().size()):\n",
+    "        if mini.triggerBits[0].product().accept(i) :print \"Trigger \", i, names.triggerName(i)\n",
+    "            \n",
     "    for i in range(ls[0],ls[1]) :\n",
     "      a= events.to(i)\n",
     "      mini.set(events)\n",
     "      evid = runid(events,mini.lumi[0])\n",
     "      if (i%5000==0) : \n",
     "        print \"Event\", i , evid\n",
+    "        for i in xrange(mini.triggerBits[0].product().size()):\n",
+    "          if mini.triggerBits[0].product().accept(i) :print \"Trigger \", i, names.triggerName(i)\n",
     "    print 'done'\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -122,25 +124,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Event 490000 306432:301:3.20e+02\n",
-      "Event 495000 306432:301:2.87e+02\n",
-      "Event 500000 306432:304:1.98e+02\n",
-      "Event 505000 306432:304:1.97e+02\n",
-      "Event 510000 306432:305:1.96e+02\n",
-      "Event 515000 306432:310:2.01e+02\n",
-      "Event 520000 306432:310:2.00e+02\n",
-      "Event 525000 306432:311:2.01e+02\n",
-      "Event 530000 306432:311:1.99e+02\n",
-      "Event 535000 306432:315:2.01e+02\n",
-      "Event 540000 306432:315:2.02e+02\n",
-      "Event 545000 306432:321:1.37e+02\n",
-      "Event 550000 306432:322:1.02e+02\n",
-      "Event 555000 306432:322:1.11e+02\n",
-      "Event 560000 306432:327:1.01e+02\n",
-      "Event 565000 306432:327:1.02e+02\n",
-      "Event 570000 306432:329:1.01e+02\n",
-      "Event 575000 306432:329:1.01e+02\n",
-      "done\n"
+      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
+      "Event 0 306135:94:1.50e+04\n",
+      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
+      "Event 5000 306135:109:1.47e+04\n",
+      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
+      "Event 10000 306135:134:1.49e+04\n",
+      "Trigger  439 HLT_Random_v3\n",
+      "Trigger  508 AlCa_LumiPixels_Random_v4\n",
+      "Event 15000 306135:136:1.50e+04\n",
+      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
+      "Event 20000 306135:215:1.47e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 25000 306135:219:1.48e+04\n",
+      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
+      "Event 30000 306135:257:1.50e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 35000 306135:266:1.48e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 40000 306135:352:1.50e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 45000 306135:370:1.48e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 50000 306135:424:1.48e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 55000 306135:492:1.33e+04\n",
+      "Trigger  438 DST_Physics_v7\n",
+      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
+      "Event 60000 306135:516:1.44e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 65000 306135:645:1.40e+04\n",
+      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
+      "Event 70000 306135:680:1.36e+04\n",
+      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
+      "Event 75000 306135:712:1.33e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 80000 306135:754:1.30e+04\n",
+      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
+      "Event 85000 306135:854:1.22e+04\n",
+      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
+      "Event 90000 306135:876:1.20e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n"
      ]
     }
    ],
@@ -154,18 +205,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
   }
  },
  "nbformat": 4,
