--- a/template.ipynb
+++ b/template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linux lxplus005.cern.ch 3.10.0-693.2.2.el7.x86_64 #1 SMP Tue Sep 12 22:26:13 UTC 2017 x86_64 x86_64 x86_64 GNU/Linux\n",
+      "Linux vinavx3.cern.ch 3.10.0-693.2.2.el7.x86_64 #1 SMP Tue Sep 12 22:26:13 UTC 2017 x86_64 x86_64 x86_64 GNU/Linux\n",
       "innocent\n",
       "/cvmfs/cms.cern.ch/slc7_amd64_gcc630/cms/cmssw/CMSSW_9_4_0/bin/slc7_amd64_gcc630/cmsRun\n"
      ]
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -97,6 +97,7 @@
     "    mini = Mini()\n",
     "    a= events.to(ls[0])\n",
     "    mini.set(events)\n",
+    "    print \"ZB index\", mini.zbIndex(events)\n",
     "    names = events.object().triggerNames(mini.triggerBits[0].product())\n",
     "    for i in xrange(mini.triggerBits[0].product().size()):\n",
     "        if mini.triggerBits[0].product().accept(i) :print \"Trigger \", i, names.triggerName(i)\n",
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -124,6 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ZB index 440\n",
       "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
       "Event 0 306135:94:1.50e+04\n",
       "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
@@ -191,7 +193,25 @@
       "Trigger  440 HLT_ZeroBias_v6\n",
       "Trigger  449 DST_ZeroBias_v2\n",
       "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n"
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 95000 306135:905:1.18e+04\n",
+      "Trigger  438 DST_Physics_v7\n",
+      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
+      "Event 100000 306135:915:1.17e+04\n",
+      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
+      "Event 105000 306135:927:1.16e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "Event 110000 306135:958:1.18e+04\n",
+      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
+      "Event 115000 306135:991:1.15e+04\n",
+      "Trigger  440 HLT_ZeroBias_v6\n",
+      "Trigger  449 DST_ZeroBias_v2\n",
+      "Trigger  490 AlCa_EcalPhiSym_v8\n",
+      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "done\n"
      ]
     }
    ],
@@ -205,6 +225,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
