--- a/template.ipynb
+++ b/template.ipynb
@@ -91,18 +91,20 @@
     "def test() :\n",
     "    f1 = tier0+'/store/data/Run2017F/ZeroBias4/MINIAOD/PromptReco-v1/000/306/432/00000/8E9534C0-40C7-E711-A529-02163E0140D6.root'  \n",
     "    f2 = tier0+'/store/data/Run2017F/ZeroBias/MINIAOD/PromptReco-v1/000/306/135/00000/8C5C6752-63C5-E711-B4C4-02163E0120F0.root'\n",
-    "    events = Events(f2)\n",
-    "#    ls = eventsInLumiRange(events,300,330)\n",
-    "    ls = eventsInLumiRange(events,0,1000)\n",
+    "    events = Events(f1)\n",
+    "    ls = eventsInLumiRange(f1,events,300,330)\n",
+    "    print ls\n",
+    "    # ls = eventsInLumiRange(f1,events,0,1000)\n",
     "    mini = Mini()\n",
-    "    a= events.to(ls[0])\n",
+    "    a= events.to(ls[0][0])\n",
     "    mini.set(events)\n",
     "    print \"ZB index\", mini.zbIndex(events)\n",
     "    names = events.object().triggerNames(mini.triggerBits[0].product())\n",
     "    for i in xrange(mini.triggerBits[0].product().size()):\n",
     "        if mini.triggerBits[0].product().accept(i) :print \"Trigger \", i, names.triggerName(i)\n",
     "            \n",
-    "    for i in range(ls[0],ls[1]) :\n",
+    "    for l in ls : \n",
+    "     for i in range(l[0],l[1]) :\n",
     "      a= events.to(i)\n",
     "      mini.set(events)\n",
     "      evid = runid(events,mini.lumi[0])\n",
@@ -125,92 +127,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZB index 440\n",
-      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
-      "Event 0 306135:94:1.50e+04\n",
-      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
-      "Event 5000 306135:109:1.47e+04\n",
-      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
-      "Event 10000 306135:134:1.49e+04\n",
-      "Trigger  439 HLT_Random_v3\n",
-      "Trigger  508 AlCa_LumiPixels_Random_v4\n",
-      "Event 15000 306135:136:1.50e+04\n",
-      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
-      "Event 20000 306135:215:1.47e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 25000 306135:219:1.48e+04\n",
-      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
-      "Event 30000 306135:257:1.50e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 35000 306135:266:1.48e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 40000 306135:352:1.50e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 45000 306135:370:1.48e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 50000 306135:424:1.48e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 55000 306135:492:1.33e+04\n",
-      "Trigger  438 DST_Physics_v7\n",
-      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
-      "Event 60000 306135:516:1.44e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 65000 306135:645:1.40e+04\n",
-      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
-      "Event 70000 306135:680:1.36e+04\n",
-      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
-      "Event 75000 306135:712:1.33e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 80000 306135:754:1.30e+04\n",
-      "Trigger  502 HLT_ZeroBias_FirstCollisionAfterAbortGap_v5\n",
-      "Event 85000 306135:854:1.22e+04\n",
-      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
-      "Event 90000 306135:876:1.20e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 95000 306135:905:1.18e+04\n",
-      "Trigger  438 DST_Physics_v7\n",
-      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
-      "Event 100000 306135:915:1.17e+04\n",
-      "Trigger  505 HLT_ZeroBias_LastCollisionInTrain_v3\n",
-      "Event 105000 306135:927:1.16e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
-      "Event 110000 306135:958:1.18e+04\n",
-      "Trigger  506 HLT_ZeroBias_FirstBXAfterTrain_v3\n",
-      "Event 115000 306135:991:1.15e+04\n",
-      "Trigger  440 HLT_ZeroBias_v6\n",
-      "Trigger  449 DST_ZeroBias_v2\n",
-      "Trigger  490 AlCa_EcalPhiSym_v8\n",
-      "Trigger  509 AlCa_LumiPixels_ZeroBias_v8\n",
+      "[175, 178, 179, 181, 187, 190, 192, 194, 196, 197, 199, 200, 201, 203, 204, 205, 209, 210, 214, 215, 218, 219, 220, 221, 222, 223, 224, 226, 228, 229, 231, 232, 235, 236, 243, 245, 247, 248, 250, 254, 255, 257, 258, 260, 261, 262, 266, 268, 274, 280, 283, 285, 288, 291, 293, 296, 301, 304, 305, 310, 311, 315, 321, 322, 327, 329, 331, 333, 334, 335]\n",
+      "[(488037, 496725), (496725, 505423), (505423, 514162), (514162, 522881), (522881, 531629), (531629, 540304), (540304, 549003), (549003, 557738), (557738, 566450), (566450, 575142)]\n",
+      "ZB index [447, 448, 449, 450, 451, 452, 453, 454, 455]\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 490000 306432:301:3.20e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Trigger  497 AlCa_EcalPhiSym_v8\n",
+      "Event 495000 306432:301:2.87e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 500000 306432:304:1.98e+02\n",
+      "Trigger  443 HLT_Physics_part6_v7\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 505000 306432:304:1.97e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Trigger  497 AlCa_EcalPhiSym_v8\n",
+      "Event 510000 306432:305:1.96e+02\n",
+      "Trigger  444 HLT_Physics_part7_v7\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Trigger  497 AlCa_EcalPhiSym_v8\n",
+      "Event 515000 306432:310:2.01e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 520000 306432:310:2.00e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Trigger  497 AlCa_EcalPhiSym_v8\n",
+      "Event 525000 306432:311:2.01e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Trigger  497 AlCa_EcalPhiSym_v8\n",
+      "Event 530000 306432:311:1.99e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 535000 306432:315:2.01e+02\n",
+      "Trigger  445 DST_Physics_v7\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 540000 306432:315:2.02e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 545000 306432:321:1.37e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 550000 306432:322:1.02e+02\n",
+      "Trigger  442 HLT_Physics_part5_v7\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 555000 306432:322:1.11e+02\n",
+      "Trigger  444 HLT_Physics_part7_v7\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 560000 306432:327:1.01e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 565000 306432:327:1.02e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Event 570000 306432:329:1.01e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
+      "Trigger  497 AlCa_EcalPhiSym_v8\n",
+      "Event 575000 306432:329:1.01e+02\n",
+      "Trigger  451 HLT_ZeroBias_part3_v6\n",
+      "Trigger  456 DST_ZeroBias_v2\n",
       "done\n"
      ]
     }
