fix new interface

--- a/zerobias.ipynb
+++ b/zerobias.ipynb
@@ -117,7 +117,7 @@
     "        mini = Mini()\n",
     "        a= events.to(ls[0][0])\n",
     "        mini.set(events)\n",
-    "        rid = runid(events,mini.lumi[0]) \n",
+    "        rid = runid(events,mini.ilumi()) \n",
     "        zbi = mini.zbIndex(events)\n",
     "        print \"ZB indeces: \", zbi\n",
     "        names = events.object().triggerNames(mini.triggerBits[0].product())\n",
@@ -133,7 +133,7 @@
     "                ok = True\n",
     "                break\n",
     "          if (i%5000==0) : \n",
-    "            evid = runid(events,mini.lumi[0])\n",
+    "            evid = runid(events,mini.ilumi())\n",
     "            print \"Event\", i , evid\n",
     "          if not ok : continue\n",
     "          weight = 100./mini.ilumi()\n",
