more pd examples

--- a/dumpHits.ipynb
+++ b/dumpHits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -91,11 +91,11 @@
     "    \n",
     "        det = (x1 - x2) * (y2 - y3) - (x2 - x3) * (y1 - y2)\n",
     "    \n",
-    "        offset = x2 * x2 + y2*y2\n",
+    "        offset = x2*x2 + y2*y2\n",
     "    \n",
-    "        bc = (x1 * x1 + y1 * y1 - offset)*0.5\n",
+    "        bc = (x1*x1 + y1*y1 - offset)*0.5\n",
     "    \n",
-    "        cd = (offset - x3 * x3 - y3 * y3)*0.5\n",
+    "        cd = (offset - x3*x3 - y3*y3)*0.5\n",
     "    \n",
     "    \n",
     "    \n",
@@ -117,13 +117,47 @@
     "        # return domore().where(radius > minRadius, radius <= minRadius)\n",
     "        return domore()\n",
     "    \n",
-    "    #return ifStraight().where(straight,standard())\n",
-    "    return standard()"
+    "    return ifStraight().where(straight,standard())\n",
+    "    # return standard()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0404625262934 0.0436314721719 0.0571633024328\n"
+     ]
+    }
+   ],
+   "source": [
+    "curvcut = 0.5/(1650*0.3) # 1/(1650*pt)\n",
+    "rl1 = 32\n",
+    "rl2 = 72\n",
+    "rl3 = 115\n",
+    "rl4 = 171\n",
+    "def deltaphi(a,b,ch=curvcut) :\n",
+    "    d = b-a\n",
+    "    cd = ch*d\n",
+    "    ca = ch*a\n",
+    "    return cd*(1.+0.5*ca*(ca+cd)+cd*cd*0.1667)\n",
+    "\n",
+    "dp12 = deltaphi(rl1,rl2)\n",
+    "dp23 = deltaphi(rl2,rl3)\n",
+    "dp34 = deltaphi(rl3,rl4)\n",
+    "print dp12,dp23,dp34\n",
+    "mpcor = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -175,16 +209,16 @@
       "8892 7484 6672 6124\n",
       "d12 2105965\n",
       "d23 1588630\n",
-      "d34 1300604\n",
+      "d34 8602969\n",
       "hl1 5408 4084\n",
-      "t123 2092234 5352 1462 163 good 133 125 126 71\n",
+      "t123 2051068 5256 1438 167 good 129 124 125 70\n",
       "1001 93680\n",
       "6737 5673 4987 4544\n",
       "d12 1204007\n",
       "d23 897960\n",
-      "d34 718326\n",
+      "d34 4757911\n",
       "hl1 3868 2912\n",
-      "t123 1280340 3157 866 147 good 119 107 104 61\n",
+      "t123 1255290 3102 838 149 good 117 104 102 60\n",
       "done 3\n"
      ]
     }
@@ -214,13 +248,13 @@
     "    # print hl2\n",
     "    #print hits.loc[lambda h: h.volume_id ==8 & h.layer_id==2]\n",
     "    #print hits[hits['volume_id']==8 & hits['layer_id']==2]\n",
-    "    nd = doublets(hits,hl1,hl2)\n",
-    "    hl1 = hits.query('volume_id ==8 & layer_id==2 & z<100 & z>-100')\n",
+    "    nd = doublets(hits,hl1,hl2) #,dp12)\n",
+    "    hl1 = hits.query('volume_id ==8 & layer_id==2 & z<100 & z>-100')  # just those who can reach BPIX4\n",
     "    print 'd12', nd # len(d12)\n",
-    "    nd = doublets(hits,hl2,hl3)\n",
+    "    nd = doublets(hits,hl2,hl3) #,dp23)\n",
     "    hl2 = hits.query('volume_id ==8 & layer_id==4')\n",
     "    print 'd23',nd # len(d12)\n",
-    "    nd = doublets(hits,hl3,hl4)\n",
+    "    nd = doublets(hits,hl3,hl4,0.7) #,dp34)\n",
     "    hl3 = hits.query('volume_id ==8 & layer_id==6')\n",
     "    print 'd34',nd # len(d12)\n",
     "    \n",
@@ -238,12 +272,12 @@
     "    na=0\n",
     "    nok=0\n",
     "    i1 =0\n",
+    "    hh2 = np.array([0,0],dtype=int)\n",
+    "    hh3 = np.array([0,0],dtype=int)\n",
     "    print 'hl1', len(hl1),len(hl1[hl1['tpt']>0.3])\n",
-    "    for hi1,h1 in hl1.iterrows() :\n",
+    "    for hi1,h1 in hl1.iloc[1000:1100].iterrows() :\n",
     "        ok=False\n",
-    "        if i1>1100 : break\n",
     "        i1+=1\n",
-    "        if i1<1000 : continue\n",
     "        p1 = h1['particle_id']\n",
     "#        print 'p1 ', p1\n",
     "        hh1 = np.array([h1['up0'],h1['up1']],dtype=int)\n",
@@ -254,7 +288,8 @@
     "        szh2 = hl2.iloc[hh1[0]:hh1[1]].loc[lambda df : abs(zi-df['z'])<300]\n",
     "        # print 'szh2', len(szh2)\n",
     "        for hi2,h2 in szh2.iterrows() :\n",
-    "            hh2 = np.array([h2['up0'],h2['up1']],dtype=int)\n",
+    "            hh2[0] = h2['up0']\n",
+    "            hh2[1] = h2['up1']\n",
     "            szh3 = hl3.iloc[hh2[0]:hh2[1]].loc[lambda df : abs(h2['z']-df['z'])<200]\n",
     "            na += len(szh3)\n",
     "            sh3 = szh3.loc[lambda df : areAlignedRZ(ri,zi,h2['r'],h2['z'],df,ptMin,CAThetaCut)]\n",
@@ -267,10 +302,12 @@
     "                for p3 in sh33['particle_id'] :\n",
     "                    if p3==p1 : ng3+=1\n",
     "            for hi3,h3 in sh33.iterrows() :\n",
-    "                hh3 = np.array([h3['up0'],h3['up1']],dtype=int)\n",
-    "                szh4 = hl4.iloc[hh3[0]:hh3[1]].loc[lambda df : abs(h3['z']-df['z'])<200]\n",
-    "                sh4 = szh4.loc[lambda df : areAlignedRZ(h2['r'],h2['z'],h3['r'],h3['z'],df,ptMin,CAThetaCut)]\n",
-    "                sh44 = sh4.loc[lambda df : haveSimilarCurvature(h2['x'],h2['y'],h3['x'],h3['y'],df, ptMin, region_origin_radius, CAPhiCut, hardPtCut)]\n",
+    "                hh3[0] = h3['up0']\n",
+    "                hh3[1] = h3['up1']\n",
+    "                # hh3 = np.array([h3['up0'],h3['up1']],dtype=int)\n",
+    "                sh44 = hl4.iloc[hh3[0]:hh3[1]].loc[lambda df : abs(h3['z']-df['z'])<200].\\\n",
+    "                loc[lambda df : areAlignedRZ(h2['r'],h2['z'],h3['r'],h3['z'],df,ptMin,CAThetaCut)].\\\n",
+    "                loc[lambda df : haveSimilarCurvature(h2['x'],h2['y'],h3['x'],h3['y'],df, ptMin, region_origin_radius, CAPhiCut, hardPtCut)]\n",
     "                nd3 += len(sh44)\n",
     "                p3 = h3['particle_id']\n",
     "                if (len(sh44)>0) & (p1==p2) & (p1==p3):\n",
