--- a/pdTemplate.ipynb
+++ b/pdTemplate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -31,9 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 108,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -42,14 +42,16 @@
     "import glob\n",
     "import math\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numba\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 109,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -73,28 +75,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def foo(df) :\n",
-    "    print 'foo'\n",
-    "    return df['x'] >0\n",
+    "@numba.vectorize(nopython=True)\n",
+    "def foo(dfx) :\n",
+    "#    print 'foo'\n",
+    "    return dfx >0\n",
     "\n",
-    "def bar(df) :\n",
-    "    print 'bar'\n",
-    "    return df['x'] < 0\n",
-    "    \n",
-    "def cond (df) :\n",
-    "    print 'cond'\n",
-    "    return df['x'] < df['y']"
+    "@numba.vectorize(nopython=True)\n",
+    "def bar(dfx) :\n",
+    "#    print 'bar'\n",
+    "    return dfx >-2\n",
+    "\n",
+    "@numba.vectorize(nopython=True)\n",
+    "def cond(dfx,dfy) :\n",
+    "    return dfx < dfy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -103,54 +107,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cond\n",
-      "foo\n",
-      "bar\n"
+      "The slowest run took 9349.55 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "100000 loops, best of 3: 13.8 µs per loop\n",
+      " [ True  True False]\n",
+      "     x    y\n",
+      "0  0.0  0.0\n",
+      "1  1.0 -1.0\n",
+      "10000 loops, best of 3: 164 µs per loop\n",
+      "      x    y\n",
+      "0  0.0  0.0\n",
+      "1  1.0 -1.0\n",
+      "10000 loops, best of 3: 171 µs per loop\n",
+      "      x    y\n",
+      "0  0.0  0.0\n",
+      "1  1.0 -1.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [x, y]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mdf.loc[lambda df : np.where(cond(df),foo(df),bar(df))]"
+    "%timeit a = np.where(cond(mdf['x'].values,mdf['y'].values),foo(mdf['x'].values),bar(mdf['x'].values))\n",
+    "%prun -l 4 a = np.where(cond(mdf['x'].values,mdf['y'].values),foo(mdf['x'].values),bar(mdf['x'].values))\n",
+    "print a\n",
+    "print mdf.loc[a]\n",
+    "%timeit a = mdf.loc[np.where(cond(mdf['x'].values,mdf['y'].values),foo(mdf['x'].values),bar(mdf['x'].values))]\n",
+    "%prun -l 4 a = mdf.loc[np.where(cond(mdf['x'].values,mdf['y'].values),foo(mdf['x'].values),bar(mdf['x'].values))]\n",
+    "print a\n",
+    "%timeit a = mdf.loc[lambda df : np.where(cond(df['x'].values,df['y'].values),foo(df['x'].values),bar(df['x'].values))]\n",
+    "%prun -l 4 a = mdf.loc[lambda df : np.where(cond(df['x'].values,df['y'].values),foo(df['x'].values),bar(df['x'].values))]\n",
+    "print a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " "
+     ]
+    }
+   ],
+   "source": [
+    "%prun -l 4 a = mdf.loc[lambda df : np.where(cond(df['x'].values,df['y'].values),foo(df['x'].values),bar(df['x'].values))]\n"
    ]
   }
  ],
