--- a/dumpHits.ipynb
+++ b/dumpHits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 238,
    "metadata": {
     "collapsed": false
    },
@@ -31,23 +31,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 239,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The line_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext line_profiler\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import glob\n",
     "import math\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numba\n",
+    "%load_ext line_profiler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 240,
    "metadata": {
     "collapsed": true
    },
@@ -59,18 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 241,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def haveSimilarCurvature(x1,y1,x2,y2,ho, ptmin, region_origin_radius, phiCut, hardPtCut) :\n",
+    "# @numba.vectorize\n",
+    "def haveSimilarCurvature(x1,y1,x2,y2,x3,y3, ptmin, region_origin_radius, phiCut, hardPtCut) :\n",
     "    region_origin_x = 0\n",
     "    region_origin_y = 0\n",
-    "    x3 = ho['x']\n",
-    "    y3 = ho['y']\n",
-    "    \n",
+    "\n",
     "    distance_13_squared = (x1 - x3)*(x1 - x3) + (y1 - y3)*(y1 - y3)\n",
     "    tan_12_13_half_mul_distance_13_squared = abs(y1 * (x2 - x3) + y2 * (x3 - x1) + y3 * (x1 - x2))\n",
     "    # high pt : just straight\n",
@@ -87,7 +97,7 @@
     "        # 165 cm/GeV = 1/(2T * 0.3)\n",
     "    \n",
     "        # take less than radius given by the hardPtCut and reject everything below\n",
-    "        minRadius = hardPtCut*165 #  // FIXME move out and use real MagField\n",
+    "        minRadius = hardPtCut*1650 #  // FIXME move out and use real MagField\n",
     "    \n",
     "        det = (x1 - x2) * (y2 - y3) - (x2 - x3) * (y1 - y2)\n",
     "    \n",
@@ -114,16 +124,15 @@
     "            return ok & (centers_distance_squared <= (radius + region_origin_radius_plus_tolerance)*(radius + region_origin_radius_plus_tolerance))\n",
     "\n",
     "\n",
-    "        # return domore().where(radius > minRadius, radius <= minRadius)\n",
-    "        return domore()\n",
+    "        return (radius > minRadius) & domore()\n",
     "    \n",
-    "    return ifStraight().where(straight,standard())\n",
+    "    return np.where(straight,ifStraight(),standard())\n",
     "    # return standard()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 242,
    "metadata": {
     "collapsed": false
    },
@@ -157,15 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 243,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def areAlignedRZ(ri, zi, r1, z1, ho, ptmin, thetaCut) :\n",
-    "    ro = ho['r']\n",
-    "    zo = ho['z']\n",
+    "@numba.vectorize(nopython=True)\n",
+    "def areAlignedRZ(ri, zi, r1, z1, ro, zo, ptmin, thetaCut) :\n",
     "    radius_diff = abs(r1 - ro)\n",
     "    distance_13_squared = radius_diff*radius_diff + (z1 - zo)*(z1 - zo)\n",
     "    \n",
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 244,
    "metadata": {
     "collapsed": true
    },
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 245,
    "metadata": {
     "collapsed": false
    },
@@ -209,26 +217,29 @@
       "8892 7484 6672 6124\n",
       "d12 2105965\n",
       "d23 1588630\n",
-      "d34 8602969\n",
+      "d34 911255\n",
       "hl1 5408 4084\n",
-      "t123 2051068 5256 1438 167 good 129 124 125 70\n",
+      "t123 2259964 5670 0 0 good 99 24 0 0 0\n",
       "1001 93680\n",
       "6737 5673 4987 4544\n",
       "d12 1204007\n",
       "d23 897960\n",
-      "d34 4757911\n",
+      "d34 503383\n",
       "hl1 3868 2912\n",
-      "t123 1255290 3102 838 149 good 117 104 102 60\n",
-      "done 3\n"
+      "t123 1240666 3034 0 0 good 97 43 0 0 0\n",
+      " done 3\n"
      ]
     }
    ],
    "source": [
-    "file = '/Users/innocent/data/trackML_minitrain.zip'\n",
+    "#file = '/Users/innocent/data/trackML_minitrain.zip'\n",
     "#file = '/Users/innocent/data/train_100_events'\n",
-    "maxEv = 2\n",
-    "evn=0\n",
-    "for event_id, hits, cells, particles, truth in load_dataset(file):\n",
+    "# maxEv = 2\n",
+    "\n",
+    "\n",
+    "def runit(file = '/Users/innocent/data/trackML_minitrain.zip', maxEv=2):\n",
+    "  evn=0  \n",
+    "  for event_id, hits, cells, particles, truth in load_dataset(file):\n",
     "    evn+=1\n",
     "    if (evn>maxEv) : break\n",
     "    print event_id, len(hits)\n",
@@ -254,7 +265,7 @@
     "    nd = doublets(hits,hl2,hl3) #,dp23)\n",
     "    hl2 = hits.query('volume_id ==8 & layer_id==4')\n",
     "    print 'd23',nd # len(d12)\n",
-    "    nd = doublets(hits,hl3,hl4,0.7) #,dp34)\n",
+    "    nd = doublets(hits,hl3,hl4,0.07) #,dp34)\n",
     "    hl3 = hits.query('volume_id ==8 & layer_id==6')\n",
     "    print 'd34',nd # len(d12)\n",
     "    \n",
@@ -272,53 +283,62 @@
     "    na=0\n",
     "    nok=0\n",
     "    i1 =0\n",
+    "    nr=0\n",
+    "    hh1 = np.array([0,0],dtype=int)\n",
     "    hh2 = np.array([0,0],dtype=int)\n",
     "    hh3 = np.array([0,0],dtype=int)\n",
     "    print 'hl1', len(hl1),len(hl1[hl1['tpt']>0.3])\n",
-    "    for hi1,h1 in hl1.iloc[1000:1100].iterrows() :\n",
+    "    for h1 in hl1.iloc[1500:1600].itertuples() :\n",
     "        ok=False\n",
     "        i1+=1\n",
-    "        p1 = h1['particle_id']\n",
+    "        p1 = h1.particle_id\n",
+    "        if p1>10 & (h1.tpt>0.3) :\n",
+    "            nr+=1\n",
     "#        print 'p1 ', p1\n",
-    "        hh1 = np.array([h1['up0'],h1['up1']],dtype=int)\n",
-    "        xi = h1['x']\n",
-    "        yi = h1['y']\n",
-    "        ri = h1['r']\n",
-    "        zi = h1['z']\n",
+    "        hh1[0] = h1.up0\n",
+    "        hh1[1] = h1.up1\n",
+    "        xi = h1.x\n",
+    "        yi = h1.y\n",
+    "        ri = h1.r\n",
+    "        zi = h1.z\n",
     "        szh2 = hl2.iloc[hh1[0]:hh1[1]].loc[lambda df : abs(zi-df['z'])<300]\n",
+    "#        if len(szh2)>0 : continue  # to time till here\n",
     "        # print 'szh2', len(szh2)\n",
-    "        for hi2,h2 in szh2.iterrows() :\n",
-    "            hh2[0] = h2['up0']\n",
-    "            hh2[1] = h2['up1']\n",
-    "            szh3 = hl3.iloc[hh2[0]:hh2[1]].loc[lambda df : abs(h2['z']-df['z'])<200]\n",
+    "        for h2 in szh2.itertuples() :\n",
+    "            hh2[0] = h2.up0\n",
+    "            hh2[1] = h2.up1\n",
+    "            szh3 = hl3.iloc[hh2[0]:hh2[1]].loc[lambda df : abs(h2.z-df['z'])<200]\n",
     "            na += len(szh3)\n",
-    "            sh3 = szh3.loc[lambda df : areAlignedRZ(ri,zi,h2['r'],h2['z'],df,ptMin,CAThetaCut)]\n",
+    "            sh3 = szh3.loc[lambda df : areAlignedRZ(ri,zi,h2.r,h2.z,df['r'].values,df['z'].values,ptMin,CAThetaCut)]\n",
     "            nd += len(sh3)\n",
-    "            sh33 = sh3.loc[lambda df : haveSimilarCurvature(xi,yi,h2['x'],h2['y'],df, ptMin, region_origin_radius, CAPhiCut, hardPtCut)]\n",
+    "            sh33 = sh3.loc[lambda df : haveSimilarCurvature(xi,yi,h2.x,h2.y,df['x'].values,df['y'].values, ptMin, region_origin_radius, CAPhiCut, hardPtCut)]\n",
+    "            if len(sh33)>0 : continue   # to time till here\n",
     "            nd2 += len(sh33)\n",
-    "            p2 = h2['particle_id']\n",
+    "            p2 = h2.particle_id\n",
     "            if (p1==p2) : ng2+=1\n",
     "            if (len(sh33)>0) & (p1==p2) :\n",
     "                for p3 in sh33['particle_id'] :\n",
     "                    if p3==p1 : ng3+=1\n",
-    "            for hi3,h3 in sh33.iterrows() :\n",
-    "                hh3[0] = h3['up0']\n",
-    "                hh3[1] = h3['up1']\n",
+    "            for h3 in sh33.itertuples() :\n",
+    "                hh3[0] = h3.up0\n",
+    "                hh3[1] = h3.up1\n",
     "                # hh3 = np.array([h3['up0'],h3['up1']],dtype=int)\n",
-    "                sh44 = hl4.iloc[hh3[0]:hh3[1]].loc[lambda df : abs(h3['z']-df['z'])<200].\\\n",
-    "                loc[lambda df : areAlignedRZ(h2['r'],h2['z'],h3['r'],h3['z'],df,ptMin,CAThetaCut)].\\\n",
-    "                loc[lambda df : haveSimilarCurvature(h2['x'],h2['y'],h3['x'],h3['y'],df, ptMin, region_origin_radius, CAPhiCut, hardPtCut)]\n",
+    "                sh44 = hl4.iloc[hh3[0]:hh3[1]].loc[lambda df : abs(h3.z-df['z'])<200]\\\n",
+    "                .loc[lambda df : areAlignedRZ(h2.r,h2.z,h3.r,h3.z,df['r'].values,df['z'].values,ptMin,CAThetaCut)]\\\n",
+    "                .loc[lambda df : haveSimilarCurvature(h2.x,h2.y,h3.x,h3.y,df['x'].values,df['y'].values, ptMin, region_origin_radius, CAPhiCut, hardPtCut)]\n",
     "                nd3 += len(sh44)\n",
-    "                p3 = h3['particle_id']\n",
+    "                p3 = h3.particle_id\n",
     "                if (len(sh44)>0) & (p1==p2) & (p1==p3):\n",
     "                    for p4 in sh44['particle_id'] :\n",
     "                        if p4==p1 : \n",
     "                            ng+=1\n",
     "                            ok=True\n",
     "        if ok: nok+=1\n",
-    "        #print i1, 't123', na, nd, nd2, nd3, ng2, ng3, ng,nok # len(d12)\n",
-    "    print 't123', na, nd, nd2, nd3, 'good', ng2, ng3,ng,nok # len(d12)\n",
-    "    \n",
+    "        #print i1, 't123', na, nd, nd2, nd3, nr, ng2, ng3, ng,nok # len(d12)\n",
+    "    print 't123', na, nd, nd2, nd3, 'good', nr, ng2, ng3,ng,nok # len(d12)\n",
+    "  return evn\n",
+    "\n",
+    "%prun -l 40 evn = runit()    \n",
     "print 'done', evn"
    ]
   },
