--- a/dumpHits.ipynb
+++ b/dumpHits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 246,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 247,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 248,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 249,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 250,
    "metadata": {
     "collapsed": false
    },
@@ -166,26 +166,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 251,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "@numba.vectorize(nopython=True)\n",
-    "def areAlignedRZ(ri, zi, r1, z1, ro, zo, ptmin, thetaCut) :\n",
-    "    radius_diff = abs(r1 - ro)\n",
-    "    distance_13_squared = radius_diff*radius_diff + (z1 - zo)*(z1 - zo)\n",
+    "def areAlignedRZ(ri, zi, rm, zm, ro, zo, ptmin, thetaCut) :\n",
+    "    radius_diff = abs(ri - ro)\n",
+    "    distance_13_squared = radius_diff*radius_diff + (zi - zo)*(zi - zo)\n",
     "    \n",
     "    pMin = ptmin*np.sqrt(distance_13_squared) #this needs to be divided by radius_diff later\n",
     "    \n",
-    "    tan_12_13_half_mul_distance_13_squared = abs(z1 * (ri - ro) + zi * (ro - r1) + zo * (r1 - ri)) \n",
-    "    return tan_12_13_half_mul_distance_13_squared * pMin <= thetaCut * distance_13_squared * radius_diff"
+    "    tan_12_13_half_mul_distance_13_squared = abs(zi * (rm - ro) + zm * (ro - ri) + zo * (ri - rm)) \n",
+    "    return tan_12_13_half_mul_distance_13_squared * pMin < thetaCut*(distance_13_squared * radius_diff)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 252,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 254,
    "metadata": {
     "collapsed": false
    },
@@ -219,14 +219,14 @@
       "d23 1588630\n",
       "d34 911255\n",
       "hl1 5408 4084\n",
-      "t123 2259964 5670 0 0 good 99 24 0 0 0\n",
+      "t123 2259964 10458 1966 275 good 99 121 124 144 74\n",
       "1001 93680\n",
       "6737 5673 4987 4544\n",
       "d12 1204007\n",
       "d23 897960\n",
       "d34 503383\n",
       "hl1 3868 2912\n",
-      "t123 1240666 3034 0 0 good 97 43 0 0 0\n",
+      "t123 1240666 5601 1089 175 good 97 137 109 117 66\n",
       " done 3\n"
      ]
     }
@@ -269,7 +269,7 @@
     "    hl3 = hits.query('volume_id ==8 & layer_id==6')\n",
     "    print 'd34',nd # len(d12)\n",
     "    \n",
-    "    CAThetaCut = 0.004 # 0.0010\n",
+    "    CAThetaCut = 0.002 # 0.0010\n",
     "    CAPhiCut = 0.175\n",
     "    ptMin = 0.6 # algo tuned for 4T so need to scale up x2\n",
     "    hardPtCut = 0.2\n",
@@ -312,7 +312,7 @@
     "            sh3 = szh3.loc[lambda df : areAlignedRZ(ri,zi,h2.r,h2.z,df['r'].values,df['z'].values,ptMin,CAThetaCut)]\n",
     "            nd += len(sh3)\n",
     "            sh33 = sh3.loc[lambda df : haveSimilarCurvature(xi,yi,h2.x,h2.y,df['x'].values,df['y'].values, ptMin, region_origin_radius, CAPhiCut, hardPtCut)]\n",
-    "            if len(sh33)>0 : continue   # to time till here\n",
+    " #           if len(sh33)>0 : continue   # to time till here\n",
     "            nd2 += len(sh33)\n",
     "            p2 = h2.particle_id\n",
     "            if (p1==p2) : ng2+=1\n",
